# Cranked

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gdb_layout.xml  gdb_setup
core/: Audio.cpp  Audio.hpp  Bump.cpp  Bump.hpp  CMakeLists.txt  Constants.hpp  Cranked.cpp  Cranked.hpp  Debugger.cpp  Debugger.hpp  Emulator.cpp  File.cpp  File.hpp  Files.cpp  Files.hpp  Geometry.hpp  Graphics.cpp  Graphics.hpp  HeapAllocator.cpp  HeapAllocator.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaRuntime.cpp  LuaRuntime.hpp  Menu.cpp  Menu.hpp  NativeEngine.cpp  NativeEngine.hpp  NativeResource.cpp  NativeResource.hpp  PathFinding.cpp  PathFinding.hpp  Perlin.hpp  PlaydateTypes.hpp  Rom.cpp  Rom.hpp  Runtime.cpp  Utils.cpp  Utils.hpp
core/resources/: Asheville-Sans-14-Bold.pft  Asheville-Sans-14-Light-Oblique.pft  bounce.pda  crank-frames-2x.pdt  crank-frames-4x.pdt  crank-frames-8x.pdt  crank-frames.pdt  crank-notice-bubble-2x.pdi  crank-notice-bubble-4x.pdi  crank-notice-bubble-8x.pdi  crank-notice-bubble.pdi  crank-notice-text-2x.pdi  crank-notice-text.pdi  menu-cancel.pdi  menu-del.pdi  menu-ok.pdi  menu-space.pdi  patches.lua  runtime.lua
desktop/: CMakeLists.txt  main.cpp
docs/: Audio.md
emulator/: Audio.cpp  Audio.hpp  CMakeLists.txt  Constants.hpp  Emulator.cpp  Emulator.hpp  File.cpp  Graphics.cpp  Graphics.hpp  HeapAllocator.hpp  LuaRuntime.cpp  LuaRuntime.hpp  Menu.hpp  PlaydateTypes.hpp  Rom.cpp  Rom.hpp  Runtime.cpp  Utils.cpp  Utils.hpp
intellij-plugin/: build.gradle.kts  settings.gradle.kts
intellij-plugin/src/main/kotlin/com/thelogicmaster/crankedplugin/: Cranked.kt
java/: CMakeLists.txt  java.cpp  jni.h  jni_md.h
libretro/: CMakeLists.txt  core.cpp
libs/libretro/: libretro.h
scripts/: embed_resource.py  pdex2elf.py  pdz.py  process_headers.py
src/: Constants.hpp  Emulator.cpp  Emulator.hpp  File.cpp  Graphics.cpp  Graphics.hpp  HeapAllocator.cpp  HeapAllocator.hpp  LuaRuntime.hpp  Menu.cpp  Rom.cpp  Rom.hpp  Runtime.cpp  Utils.hpp  libretro.cpp  main.cpp
testing/: .gitignore  .lua-format  CMakeLists.txt  Makefile  Requirements.txt  main.c  verify.py
testing/Source/: main.lua  pdxinfo  test.lua  tests.lua
